feat: adding hateoas to DailyReport route