@@ -2,13 +2,17 @@ package mai_ocean.robot_data_transfer.rest;
 
 import jakarta.validation.Valid;
 import mai_ocean.robot_data_transfer.model.DailyReport;
+import mai_ocean.robot_data_transfer.model.Temperature;
 import mai_ocean.robot_data_transfer.model.dto.DailyReportDTO;
+import mai_ocean.robot_data_transfer.model.dto.mapper.DailyReportDTOLinksMapper;
 import mai_ocean.robot_data_transfer.model.dto.mapper.DailyReportDTOMapper;
 import mai_ocean.robot_data_transfer.repository.DailyReportRep;
+import mai_ocean.robot_data_transfer.repository.TemperatureRep;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
+import java.time.LocalDate;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
@@ -18,10 +22,14 @@ import java.util.stream.Collectors;
 public class DailyReportRest {
     @Autowired
     private DailyReportRep dailyRep;
-    private final DailyReportDTOMapper dailyReportDTOMapper;
+    @Autowired
+    private TemperatureRep tempRep;
+    private final DailyReportDTOLinksMapper ailyReportDTOLinksMapper;
+    @Autowired
+    private DailyReportDTOLinksMapper dailyReportDTOLinksMapper;
 
-    public DailyReportRest(DailyReportDTOMapper dailyReportDTOMapper) {
-        this.dailyReportDTOMapper = dailyReportDTOMapper;
+    public DailyReportRest(DailyReportDTOLinksMapper dailyReportDTOLinksMapper) {
+        this.ailyReportDTOLinksMapper = dailyReportDTOLinksMapper;
     }
 
     @GetMapping(value = "/find/all")
@@ -30,26 +38,38 @@ public class DailyReportRest {
         if(dailyReports.isEmpty()) {
             ResponseEntity.noContent().build();
         }
-        return ResponseEntity.ok(dailyReports.stream().map(dailyReportDTOMapper).collect(Collectors.toList()));
+        return ResponseEntity.ok(dailyReports.stream().map(dailyReportDTOLinksMapper).toList());
     }
 
     @GetMapping(value = "/find/{id}")
     public ResponseEntity<DailyReportDTO> findById(@PathVariable String id) {
         Optional<DailyReport> dailyReport = dailyRep.findById(id);
         if(dailyReport.isPresent()) {
-            return ResponseEntity.ok(dailyReportDTOMapper.apply(dailyReport.get()));
+            return ResponseEntity.ok(dailyReportDTOLinksMapper.apply(dailyReport.get()));
         }
         return ResponseEntity.notFound().build();
     }
 
     @PostMapping("/create")
-    private ResponseEntity<DailyReport> createDailyReport(@Valid @RequestBody DailyReport dailyReport) {
+    public  ResponseEntity<DailyReportDTO> create(@Valid @RequestBody DailyReport dailyReport) {
         try{
+            dailyReport.setDtDay(LocalDate.now());
+            dailyReport.setAvgTemp(dailyReport.getDailyAvarageTemp(tempRep, dailyReport.getDtDay()));
             dailyRep.save(dailyReport);
-            return ResponseEntity.ok(dailyReport);
+            return ResponseEntity.ok(dailyReportDTOLinksMapper.apply(dailyReport));
         }catch (Exception e){
             e.printStackTrace();
             return ResponseEntity.internalServerError().build();
+        }
+    }
+    @DeleteMapping(value = "/delete/{id}")
+    public  ResponseEntity<DailyReportDTO> delete(@PathVariable String id) {
+        try{
+            dailyRep.deleteById(id);
+            return ResponseEntity.ok().build();
+        }catch (Exception e){
+            e.printStackTrace();
+            return ResponseEntity.notFound().build();
         }
     }
 
